--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,4 +7,173 @@
 
 body {
   font-family: "B612 Mono", monospace;
+  margin-right: 180px;
+  nav {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 180px;
+    ul {
+      display: grid;
+      grid-template-columns: repeat(3, 60px);
+      grid-template-rows: 100vh;
+      li {
+        background-color: #f7b432;
+        display: flex;
+
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        span {
+          transform: rotateZ(90deg);
+        }
+        &:first-child {
+          background-color: #5ea3ec;
+        }
+        &:nth-child(2) {
+          background-color: #b43432;
+        }
+      }
+    }
+  }
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "DM Serif Display", serif;
+}
+
+header {
+  margin-top: 150px;
+  h1 {
+    padding-left: $paddingLeft;
+    font-size: 70px;
+    width: 80%;
+    line-height: 1.2;
+    margin-bottom: 80px;
+  }
+  .header__photo {
+    width: 100%;
+    height: 120vh;
+    background-image: url("https://source.unsplash.com/random/15");
+    background-size: cover;
+    background-position: center center;
+  }
+}
+
+.about {
+  margin-top: 100px;
+  margin-bottom: 200px;
+  padding: 0 $paddingLeft;
+  h2 {
+    font-size: 100px;
+    width: 70%;
+    margin-bottom: 100px;
+  }
+  .about__columns {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 60px;
+    .about__column {
+      height: 100%;
+      display: grid;
+      grid-template-rows: 400px 20%;
+      gap: 30px;
+      .img__wrapper {
+        overflow: hidden;
+        img {
+          max-width: 100%;
+          height: 400px;
+        }
+      }
+      span {
+        font-size: 12px;
+        line-height: 1.5;
+      }
+    }
+  }
+}
+
+.events {
+  padding: 0 $paddingLeft;
+  display: grid;
+  justify-items: center;
+  margin-bottom: 100px;
+  .events__header {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center center;
+    font-size: 60px;
+    h4 {
+      font-size: 100px;
+      text-align: center;
+    }
+  }
+  .events__list {
+    margin-top: 100px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center center;
+    width: 100%;
+    .events__event {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      span {
+        margin-bottom: 30px;
+        font-size: 12px;
+      }
+    }
+  }
+  .btn {
+    margin-top: 100px;
+  }
+}
+
+.btn {
+  text-transform: lowercase;
+  text-decoration: none;
+  color: black;
+  border: 1px solid black;
+  padding: 15px 50px;
+  &:hover {
+    color: white;
+    background-color: black;
+  }
+}
+
+.location {
+  padding: $paddingLeft;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 33vh;
+  gap: 50px;
+  .location__address {
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    h3 {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    border: 1px solid black;
+  }
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 150px 0;
+  h4 {
+    font-size: 50px;
+    margin-bottom: 25px;
+  }
 }
